fix scroll on mobile

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -140,7 +140,7 @@
 }
 
 .about-me {
-  margin-top: 4rem;
+  margin-top: 5rem;
   border: solid $anti-flash-white-color 2px;
   padding: 15px 0 15px 0;
 }
